Give all images an alt attribute and value

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>Cocktail Recipes</h1>
-    <img src="https://cdn.5280.com/2022/07/JBar_2021_1_0426_Hotel-Jerome-960x625.jpg" style="width:800px;height:450px;">
+    <img src="https://cdn.5280.com/2022/07/JBar_2021_1_0426_Hotel-Jerome-960x625.jpg" style="width:800px;height:450px;" alt="cocktail-bar">
     <div></div>
     <a href="recipes/the-presbyterian.html">THE PRESBYTERIAN</a>
     <div></div>
