--- a/recipes/blackberry-martini.html
+++ b/recipes/blackberry-martini.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>THE BLACKBERRY MARTINI</h1>
-    <img src="https://cdn.shopify.com/s/files/1/1773/8773/articles/Creme_de_Mure_x400.jpg?v=1661300208">
+    <img src="https://cdn.shopify.com/s/files/1/1773/8773/articles/Creme_de_Mure_x400.jpg?v=1661300208" alt="blackberry-martini">
     <h2>This Blackberry Martini is gorgeous and so refreshing!</h2>
     <p>One of the most exquisite exploitations of the blackberry is accomplished by teaming it with a little booze and presenting it in a sugar-rimmed martini glass, making what might be called a blacktini.</p>
     <h3>Ingredients</h3>
