--- a/recipes/the-presbyterian.html
+++ b/recipes/the-presbyterian.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <h1>THE PRESBYTERIAN</h1>
-    <img src="https://cdn.shopify.com/s/files/1/1773/8773/articles/chrch_x400.jpg?v=1661298638">
+    <img src="https://cdn.shopify.com/s/files/1/1773/8773/articles/chrch_x400.jpg?v=1661298638" alt="the-presbyterian">
     <h2>If you treat whiskey like a religion, a classic Presbyterian is just the cocktail for you.</h2>
     <p>The Presbyterian is a refreshing way to enjoy your whiskey in a casual highball drink. It is a classic cocktail that has just three common ingredients, so it is very easy to mix up.</p>
     <h3>Ingredients</h3>
