--- a/recipes/the-presbyterian.html
+++ b/recipes/the-presbyterian.html
@@ -23,5 +23,6 @@
         </li>
         <li>Garnish with Lemon Wedge</li>
     </ol>
+    <a href="../index.html">More Recipes</a>
 </body>
 </html>
