--- a/recipes/old-cuban.html
+++ b/recipes/old-cuban.html
@@ -25,5 +25,6 @@
         </li>
         <li>Garnish with a fresh mint leaf and serve.</li>
     </ol>
+    <a href="../index.html">More Recipes</a>
 </body>
 </html>
