--- a/recipes/blackberry-martini.html
+++ b/recipes/blackberry-martini.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>THE BLACKBERRY MARTINI</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>THE BLACKBERRY MARTINI</h1>
