--- a/recipes/the-presbyterian.html
+++ b/recipes/the-presbyterian.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>THE PRESBYTERIAN</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>THE PRESBYTERIAN</h1>
