Contain h2 and p element in a div
Made new div element with a class of 'description'

--- a/recipes/blackberry-martini.html
+++ b/recipes/blackberry-martini.html
@@ -8,8 +8,10 @@
 <body>
     <h1>THE BLACKBERRY MARTINI</h1>
     <img src="https://cdn.shopify.com/s/files/1/1773/8773/articles/Creme_de_Mure_x400.jpg?v=1661300208" alt="blackberry-martini">
+    <div class="description">
     <h2>This Blackberry Martini is gorgeous and so refreshing!</h2>
     <p>One of the most exquisite exploitations of the blackberry is accomplished by teaming it with a little booze and presenting it in a sugar-rimmed martini glass, making what might be called a blacktini.</p>
+    </div>
     <h3>Ingredients</h3>
     <ul>
         <li>40ml Gin</li>
