--- a/recipes/old-cuban.html
+++ b/recipes/old-cuban.html
@@ -8,8 +8,10 @@
 <body>
     <h1>OLD CUBAN RECIPE</h1>
     <img src="https://cdn.shopify.com/s/files/1/1773/8773/articles/old_cuban_x400.jpg?v=1661396097" alt="old-cuban">
+    <div class="description">
     <h2>This classic cocktail has over 100 years of history and a refreshing, nuanced flavor.</h2>
     <p>The cocktail takes inspiration from the Mojito, but it features a few important tweaks that result in a unique flavor experience. For starters, Saunders employs aged rum, rather than the Mojito’s traditional call for white rum. From there, simple syrup, fresh lime juice and mint continue the Mojito trajectory, but those ingredients benefit from aromatic bitters and a topper of champagne, which brings a festive dose of effervescence.</p>
+    </div>
     <h3>Ingredients</h3>
     <ul>
         <li>45ml Rum</li>
