Add ingredient class to unordered list

--- a/recipes/the-presbyterian.html
+++ b/recipes/the-presbyterian.html
@@ -13,7 +13,7 @@
     <p>The Presbyterian is a refreshing way to enjoy your whiskey in a casual highball drink. It is a classic cocktail that has just three common ingredients, so it is very easy to mix up.</p>
     </div>
     <h3>Ingredients</h3>
-    <ul>
+    <ul class="ingredients">
         <li>45ml Bourbon</li>
         <li>45ml Soda Water</li>
         <li>Ginger Ale to top</li>
